--- a/LaTeX/settings part.tex
+++ b/LaTeX/settings part.tex
@@ -6,7 +6,6 @@
 
 % layout/spacing related packages
 \usepackage[margin=0.5in]{geometry}
-\usepackage{setspace}\onehalfspace
 \usepackage{indentfirst} \parindent=1em	% 들여쓰기
 \usepackage{microtype}
 \usepackage{kotex}	% 한글 사용 가능
@@ -14,7 +13,9 @@
 
 \begin{document}
 	\section{환경설정}
-	다음은 환경설정에 대한 설명이다.	환경설정은 크게 검색폴더 선택, 동영상 확장자, 이미지 확장자, 문서 확장자, 기타 확장자, 검사예외 폴더, 최종 사용일자 설정 등으로 나뉘어져 있다.
+	다음은 환경설정에 대한 설명이다.	환경설정은 크게 \textbf{검색폴더 선택, 동영상 확장자, 이미지 확장자, 문서 확장자, 기타 확장자, 검사예외 폴더, 최종 사용일자 설정} 등으로 나뉘어져 있다.
+	
+	검색폴더 선택칸을 제외하고 확장자 추가/삭제 버튼을 통해 \textbf{확장자를 변경한 후 확인 버튼을 누르면 변경된 값이 저장}된다.
 	
 	\begin{figure}[h]
 		\centering
@@ -24,7 +25,7 @@
 	\end{figure}
 
 	\subsection{검색폴더 선택}
-	모든 폴더 및 파일을 검색하는 것이 아닌 일부분의 폴더에서 검색을 하고 싶을때 사용한다. 하지만 다음 이미지와 같이 Program Files 나 Windows 폴더의 경우, 이후에 나올 검색예외폴더 설정창에서 체크박스를 해제하여야 검색이 가능하다.
+	모든 폴더 및 파일을 검색하는 것이 아닌 \textbf{일부분의 폴더에서 검색을 하고 싶을때 사용}한다. 하지만 다음 이미지와 같이 \textbf{Program Files 나 Windows 폴더}의 경우, 이후에 나올 \textbf{검색예외폴더 설정창에서 체크박스를 해제}하여야 검색이 가능하다.
 	
 	\begin{figure}[h]
 		\centering
@@ -34,7 +35,8 @@
 	\end{figure}
 	
 	\subsection{Movie 확장자}
-	검색 파일 중 동영상 확장자를 가지고 있는 파일들을 메인 화면 내 동영상 섹션에 나열한다. 우측의 추가 버튼으로 동영상 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거 할 수 있다.
+	검색을 통해 메인 화면에 있는 동영상 섹션에 나열할 \textbf{동영상 파일들의 확장자를 나열해 놓은 칸}이다.
+	우측의 \textbf{추가 버튼으로 동영상 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거} 할 수 있다.
 	
 	\begin{figure}[h]
 		\centering
@@ -44,7 +46,7 @@
 	\end{figure}
 
 	\subsection{Image 확장자}
-	검색 파일 중 이미지 확장자를 가지고 있는 파일들을 메인 화면 내 이미지 섹션에 나열한다. 동영상 확장자 추가 버튼과 마찬가지로 우측의 추가 버튼으로 이미지 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며, 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거 할 수 있다.
+	검색을 통해 메인 화면에 있는 이미지 섹션에 나열할 \textbf{이미지 파일들의 확장자를 나열해 놓은 칸}이다. 동영상 확장자 추가 버튼과 마찬가지로 우측의 \textbf{추가 버튼으로 이미지 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며, 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거} 할 수 있다.
 	
 	\begin{figure}[h]
 		\centering
@@ -54,13 +56,38 @@
 	\end{figure}
 	
 	\subsection{Doc 확장자}		
-	검색 파일 중 문서 관련 확장자를 가지고 있는 파일들을 메인 화면 내 이미지 섹션에 나열한다. 동영상 확장자 추가 버튼과 마찬가지로 우측의 추가 버튼으로 문서 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며, 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거 할 수 있다.\\
-	추가적으로 문서 확장자의 대표적 예인 .txt 확장자가 기본 확장자에 포함되어 있지 않기에 검색을 하기 위해선 추가 버튼을 이용하여 .txt 확장자를 추가하여야 한다.
+	검색을 통해 메인 화면에 있는 문서 섹션에 나열할 \textbf{문서 파일들의 확장자를 나열해 놓은 칸}이다. 동영상 확장자 추가 버튼과 마찬가지로 \textbf{우측의 추가 버튼으로 문서 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며, 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거} 할 수 있다.
+	
+	추가적으로 문서 확장자의 대표적 예인 \textbf{.txt 확장자가 기본 확장자에 포함되어 있지 않기에 검색을 하기 위해선 추가 버튼을 이용하여 .txt 확장자를 추가}하여야 한다.
 	
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.4\textwidth]{Figures/Doc}
 		\caption{Doc 확장자}
 		\label{fig:Doc}
+	\end{figure}
+
+	\subsection{기타 확장자}	
+	검색을 통해 메인 화면에 있는 기타 섹션에 \textbf{검색하길 원하는 파일들의 확장자를 나열해 놓는 칸}이다. 동영상 확장자 추가 버튼과 마찬가지로 우측의 \textbf{추가 버튼으로 기타 섹션 내에서 검색하고 싶은 확장자를 더할 수 있으며, 삭제 버튼으로 검색에서 제외하고 싶은 확장자를 제거} 할 수 있다.
+	
+	추가적으로 \textbf{초기 기타 확장자 칸에는 아무런 확장자도 적혀 있지 않기에 사용자가 추가를 해주어야만} 관련 확장자 파일이 검색 된다.
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.4\textwidth]{Figures/etc}
+		\caption{기타 확장자}
+		\label{fig:etc}
+	\end{figure}
+
+	\subsection{검사예외폴더}	
+	검사예외폴더 칸은 \textbf{검색시 소요되는 시간을 줄이기 위하여} 윈도우 운영체제와 대부분의 프로그램들이 설치되는 \textbf{ Windows 폴더와 Program Files 폴더를 체크박스를 통해 검색에서 제외하거나 포함}시키는 것이 가능하다.
+	
+	검사예외폴더 칸에는 기본적으로 \textbf{Windows와 Program 폴더만이 지정 가능}하다.
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.4\textwidth]{Figures/except}
+		\caption{검사예외폴더}
+		\label{fig:except}
 	\end{figure}
 \end{document}
