--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,37 @@
 	본 소프트웨어를 선택한 이유는 컴퓨터 내 자료를 정리하지 않고 무분별하게 저장하여 사용하는 유저들의 자료 정리를 효율적으로 하기 위한 프로그램 중 인터페이스가 가장 단순하면서도 효과적인 사용이 가능하기 때문입니다.
 	\section{소프트웨어 개요}
 	본 소프트웨어는 사용자들의 컴퓨터에 존재하는 파일들(ex. 동영상, 이미지, 문서 등)의 위치를 파악하여 삭제 및 관리를 용이하게 할 수 있도록 도와주는 소프트웨어 입니다.
+	\section{소프트웨어 사용}
+	다음은 소프트웨어에 대한 설명이다.  실행창에는  \textbf{검사시작, 환경설정}버튼도있고,  \textbf{파일종류별로 볼수있는 창}이 있다.
+		\subsection{exe실행파일 실행화면}
+		크게 \textbf{검색시작, 환경설정 ,파일종류 }를 볼수 있다.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{Figures/exe2}
+		\caption{exe실행파일 실행화면}
+		\label{fig:exe2}
+	\end{figure}
+
+		\subsection{파일의 catalog}
+		파일의 종류에는 \textbf{동영상,이미지,문서,기타}로 구분되어진다.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{Figures/catalog}
+		\caption{catalog }
+		\label{fig:catalog}
+	\end{figure}
+
+
+
+		\subsection{검색 완료창}
+		검색이 완료된후 \textbf{파일명, 파일크기, 최근사용일}로 구분되어 파일이 정리되어 뜬다.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{Figures/complete}
+		\caption{complete}
+		\label{fig:complete}
+	\end{figure}
+
 	\section{환경설정}
 	다음은 환경설정에 대한 설명이다.	환경설정은 크게 \textbf{검색폴더 선택, 동영상 확장자, 이미지 확장자, 문서 확장자, 기타 확장자, 검사예외 폴더, 최종 사용일자 설정} 등으로 나뉘어져 있다.
 	
