--- a/CapacityManager Manual.tex
+++ b/CapacityManager Manual.tex
@@ -10,11 +10,14 @@
 \usepackage{microtype}
 \usepackage{kotex}	% 한글 사용 가능
 \usepackage{graphicx}
+\usepackage{subfigure}
 \usepackage{setspace} \onehalfspacing
 
-\title{CapacityManger 소프트웨어 메뉴얼}
+\title{CapacityManager 소프트웨어 메뉴얼}
 
 \author{문철승, 임동민, 황연수} 
+
+\date{\today}
 
 \begin{document}
 	
@@ -25,8 +28,61 @@
 	\normalsize
 	\section{소프트웨어 선택 이유}
 	본 소프트웨어를 선택한 이유는 컴퓨터 내 자료를 정리하지 않고 무분별하게 저장하여 사용하는 유저들의 자료 정리를 효율적으로 하기 위한 프로그램 중 인터페이스가 가장 단순하면서도 효과적인 사용이 가능하기 때문입니다.
+	
 	\section{소프트웨어 개요}
 	본 소프트웨어는 사용자들의 컴퓨터에 존재하는 파일들(ex. 동영상, 이미지, 문서 등)의 위치를 파악하여 삭제 및 관리를 용이하게 할 수 있도록 도와주는 소프트웨어 입니다.
+	
+	\section{소프트웨어 실행}
+	다음은 소프트웨어에 대한 설명이다.  실행창에는  \textbf{검사시작, 환경설정} 버튼이 있으며,  \textbf{파일을 종류별로 볼수있는 창}(동영상, 이미지, 문서, 기타)이 있다. 
+		\subsection{실행화면}
+		실행화면에서는 크게 \textbf{검색시작, 환경설정, 파일종류(동영상, 이미지, 문서, 기타)}를 볼수 있다.
+		검색시작을 누르면 파일 추출후 검색을 시작한다.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{Figures/exe2}
+		\caption{실행화면}
+		\label{fig:exe}
+	\end{figure}
+
+	\subsection{파일의 Category}
+	파일의 종류에는 \textbf{동영상, 이미지, 문서, 기타}로 구분되어진다.
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{Figures/catalog}
+		\caption{Category}
+		\label{fig:category}
+	\end{figure}
+
+	\subsection{검색 완료 창}
+	검색이 완료된 후 \textbf{파일저장위치, 파일명, 파일크기, 최근사용일}로 구분되어 파일이 정리되어 나타난다.
+	그 외에 검색된 총 파일의 수도 함께 출력된다.
+		
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{Figures/complete}
+		\caption{검색완료}
+		\label{fig:complete}
+	\end{figure}
+
+	\subsection{검색 완료의 예}
+	다음 사진은 각각 동영상과 이미지 파일들의 검색이 완료되었을때 나타나는 창이다.
+
+	\begin{figure} [h]
+	\centering
+	\subfigure{
+	\includegraphics[width=0.45\linewidth]{Figures/avi} }
+	\centering
+	\subfigure{
+	\includegraphics[width=0.45\linewidth]{Figures/jpg}}
+	
+	\caption{동영상 및 이미지 Category}
+	\label{fig:avi}
+	\label{fig:jpg}
+	\end{figure}
+
+	\newpage
+
 	\section{환경설정}
 	다음은 환경설정에 대한 설명이다.	환경설정은 크게 \textbf{검색폴더 선택, 동영상 확장자, 이미지 확장자, 문서 확장자, 기타 확장자, 검사예외 폴더, 최종 사용일자 설정} 등으로 나뉘어져 있다.
 	
@@ -112,8 +168,6 @@
 			\label{fig:except}
 		\end{figure}
 	
-		\newpage
-	
 		\subsection{최종 사용일자}	
 		최종 사용일자 칸은 검색 시 나열할 파일이 \textbf{최종 사용일자 칸에 적힌 날짜 이전의 사용 파일만}을 출력하는 일종의 조건문이다.
 		
@@ -147,14 +201,10 @@
 		\LARGE \bf |Bug| \newline
 		
 		\begin{enumerate}
-		\large \item 한번에 전체 선택이 불가능 \newline
+		\large
 		
 		\item 환경설정에서 폴더 선택하고 나갔다가 다시 환경설정 들어가면
 		선택한 폴더위치가 초기화되버림 \newline
-		
-		\item 파일명, 파일크기, 마지막사용 날짜별 정리 기능 없음 \newline
-		
-		\item 환경설정에 폴더 설정 부분 복잡성 \newline
 		
 		\item 검색 시간이 오래 걸리거나 검색이 마무리 되지 않을 때가 있음
 		('폴더 취합 중'이 오래 걸림) \newline \newline
